--- a/rbm.cabal
+++ b/rbm.cabal
@@ -23,10 +23,14 @@ Cabal-version:       >=1.2
 
 Library
   -- Modules exported by the library.
-  -- Exposed-modules:     
+  Exposed-modules:   AI.RBM
   
   -- Packages needed in order to build this package.
-  -- Build-depends:       
+  Build-depends:      vector        >= 0.9   && < 1.0
+                     ,repa          >= 2.2   && < 3.0
+                     ,colour        >= 2.3.1 && < 3.0
+                     ,Chart         >= 2.3.1 && < 3.0
+                     ,data-accessor >= 0.2.2 && < 1.0
   
   -- Modules not exported by this package.
   -- Other-modules:       
