--- a/rbm.cabal
+++ b/rbm.cabal
@@ -24,13 +24,19 @@ Cabal-version:       >=1.2
 Library
   -- Modules exported by the library.
   Exposed-modules:   AI.RBM
+                    ,Graphics.Rendering.Chart.Plot.PixelMap
   
   -- Packages needed in order to build this package.
-  Build-depends:      vector        >= 0.9   && < 1.0
-                     ,repa          >= 2.2   && < 3.0
-                     ,colour        >= 2.3.1 && < 3.0
-                     ,Chart         >= 2.3.1 && < 3.0
-                     ,data-accessor >= 0.2.2 && < 1.0
+  Build-depends:      base            >= 4.4    && < 5.0
+                     ,vector          >= 0.9    && < 1.0
+                     ,random-fu     >= 0.2.1    && < 1.0
+                     ,repa            >= 2.2    && < 3.0
+                     ,repa-algorithms >= 2.2    && < 3.0
+                     ,colour          >= 2.3.1  && < 3.0
+                     ,cairo           >= 0.12.2 && < 1.0
+                     ,Chart           >= 0.14   && < 1.0
+                     ,data-accessor   >= 0.2.2  && < 1.0
+                     ,data-accessor-template   >= 0.2.1.8  && < 1.0
   
   -- Modules not exported by this package.
   -- Other-modules:       
