--- a/rbm.cabal
+++ b/rbm.cabal
@@ -24,13 +24,19 @@ Cabal-version:       >=1.2
 Library
   -- Modules exported by the library.
   Exposed-modules:   AI.RBM
+                    ,AI.Data.MNIST
                     ,Graphics.Rendering.Chart.Plot.PixelMap
   
   -- Packages needed in order to build this package.
   Build-depends:      base            >= 4.4    && < 5.0
+                     ,bytestring      >= 0.9.2  && < 1.0
+                     ,zlib            >= 0.5.3  && < 1.0
+                     ,binary          >= 0.5.0  && < 1.0
+                     ,filepath        >= 1.2    && < 2.0
                      ,vector          >= 0.9    && < 1.0
-                     ,random-fu     >= 0.2.1    && < 1.0
+                     ,random-fu       >= 0.2.1  && < 1.0
                      ,repa            >= 2.2    && < 3.0
+                     ,repa-bytestring >= 2.2    && < 3.0
                      ,repa-algorithms >= 2.2    && < 3.0
                      ,colour          >= 2.3.1  && < 3.0
                      ,cairo           >= 0.12.2 && < 1.0
